Titulo de Proyecto

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
+<meta charset="utf-8">
+	<title>Proyecto GIT</title>
 </head>
 <body>
-
+<h1>Proyecto versionado con GIT</h1>
 </body>
 </html>
