--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-	<title>Proyecto GIT</title>
-</head>
-<body>
-<h1>Proyecto versionado con GIT</h1>
-</body>
+	<head>
+	<meta charset="utf-8">
+		<title>Proyecto GIT</title>
+	</head>
+	<body>
+		<h1>Proyecto versionado con GIT</h1> <hr>
+			<section>
+				<table border="1">
+					<tr>
+						<td>Nombre</td>
+						<td>Edad</td>
+						<td>Sexo</td>
+						<td>Carrera</td>
+					</tr>
+
+					<tr>
+						<td>Rubi</td>
+						<td>23</td>
+						<td>Femenino</td>
+						<td>Sistema</td>
+					</tr>
+
+				</table>
+		
+			</section>
+	</body>
 </html>
