--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
 				</table>
 		
 			</section>
+			<footer>
+				<hr>
+				<span>2017 &copy; Taller de GIT y github</span>
+			</footer>
 	</body>
 </html>
